<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="?colorPrimary">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tv_sign_up_message"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="20sp"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textInputLabelForLogin">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:imeActionId="@+id/code"
                android:imeActionLabel="@string/action_validate"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/et_validate"
                android:inputType="text"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textInputLabelForLogin">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_code"
                android:imeActionId="@+id/code"
                android:imeActionLabel="@string/action_validate"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/view_group_validate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#3dffffff">

            <TextView
                android:id="@+id/tv_validate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/action_validate"
                android:textColor="#3dffffff"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground"/>

            <ProgressBar
                android:id="@+id/progressBar_validate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textInputLabelForLogin">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:imeActionId="@+id/sign_up"
                android:imeActionLabel="@string/action_sign_up"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/et_password_confirm"
                android:inputType="textPassword"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textInputLabelForLogin">

            <EditText
                android:id="@+id/et_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password_confirm"
                android:imeActionId="@+id/sign_up"
                android:imeActionLabel="@string/action_sign_up"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/view_group_sign_up"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#3dffffff">

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/action_sign_up"
                android:textColor="#3dffffff"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground"/>

            <ProgressBar
                android:id="@+id/progressBar_sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>