<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/v_go_back"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="bottom"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:gravity="bottom|start"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/exercise_plan"/>

                <android.support.v4.widget.Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        app:cardBackgroundColor="?colorPrimary"
                        app:cardCornerRadius="16dp" >

                        <TextView
                            android:id="@+id/tv_add_exercise"
                            android:text="@string/add_exercise"
                            android:paddingTop="4dp"
                            android:paddingBottom="4dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:textAllCaps="true"
                            android:textColor="#fff"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?android:selectableItemBackground"/>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_exercise"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#eee"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ccc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/action_cancel"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

                <TextView
                    android:id="@+id/tv_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/action_set"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>